apps/stella/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment

spec:
  replicas: 1
  selector:
    matchLabels:
      app: default
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: default
    spec:
      containers:
        - name: app
          image: ghcr.io/slashnephy/stella
          ports:
            - containerPort: 6742
          resources:
            limits:
              memory: 1Gi
          volumeMounts:
            - name: media
              mountPath: /app/media
        - name: db
          image: mongo:5.0
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: db
              mountPath: /data/db
      restartPolicy: Always
      volumes:
        - name: media
          hostPath:
            path: /opt/k8s-volumes/stella-media
            type: DirectoryOrCreate
        - name: db
          hostPath:
            path: /opt/k8s-volumes/stella-db
            type: DirectoryOrCreate
