apps/stella/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service

spec:
  ports:
    - name: "6742"
      port: 6742
      targetPort: 6742
  selector:
    app: default

---
apiVersion: v1
kind: Service
metadata:
  name: db

spec:
  type: NodePort
  ports:
    - name: "27017"
      port: 27017
      nodePort: 27017
      targetPort: 27017
  selector:
    app: default
